--- a/styles.css
+++ b/styles.css
@@ -582,6 +582,16 @@ ol li {
 	margin: 0 auto;
 }
 
+#contact h1,
+#contact div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+#contact i {
+	margin-right: 14px;
+}
+
 @media (max-width: 576px) {
 	.container {
 		padding-left: calc(16px * 2);
@@ -4011,8 +4021,8 @@ table td {
 }
 
 .pagination {
-	padding-top: 96px;
-	margin-bottom: 96px;
+	padding-top: 80px;
+	margin-bottom: 70px;
 	text-align: center;
 }
 
@@ -4023,11 +4033,11 @@ table td {
 }
 
 .footer {
-	margin: 80px 0 58px;
+	margin: 50px 0 58px;
 }
 @media only screen and (max-width: 576px) {
 	.footer {
-		margin: 80px 0 38px;
+		margin: 50px 0 38px;
 	}
 }
 
